// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shortcuts-section.js render() when given one shortcut render shortcut correctly 1`] = `
<div
  className="shortcuts-section"
>
  <div
    className="shortcuts-section-title"
  >
    Shortcuts Cheatsheet
  </div>
  <hr />
  <div>
    <div
      className="shortcut-title d-inline"
    >
      Foo
      :
    </div>
    <span
      className="shortcut-key text-monospace"
    >
      Ctrl
    </span>
  </div>
</div>
`;

exports[`shortcuts-section.js render() when given several shortcuts render all shortcuts correctly 1`] = `
<div
  className="shortcuts-section"
>
  <div
    className="shortcuts-section-title"
  >
    Shortcuts Cheatsheet
  </div>
  <hr />
  <div>
    <div
      className="shortcut-title d-inline"
    >
      Foo
      :
    </div>
    <span
      className="shortcut-key text-monospace"
    >
      Ctrl
    </span>
  </div>
  <div>
    <div
      className="shortcut-title d-inline"
    >
      Bar
      :
    </div>
    <span>
      <span
        className="shortcut-key text-monospace"
      >
        Alt
      </span>
      <span
        className="shortcut-key-concatinator"
      >
        +
      </span>
    </span>
    <span
      className="shortcut-key text-monospace"
    >
      Q
    </span>
  </div>
  <div>
    <div
      className="shortcut-title d-inline"
    >
      FooBar
      :
    </div>
    <span>
      <span
        className="shortcut-key text-monospace"
      >
        Ctrl
      </span>
      <span
        className="shortcut-key-concatinator"
      >
        +
      </span>
    </span>
    <span>
      <span
        className="shortcut-key text-monospace"
      >
        Shift
      </span>
      <span
        className="shortcut-key-concatinator"
      >
        +
      </span>
    </span>
    <span>
      <span
        className="shortcut-key text-monospace"
      >
        Alt
      </span>
      <span
        className="shortcut-key-concatinator"
      >
        +
      </span>
    </span>
    <span
      className="shortcut-key text-monospace"
    >
      Q
    </span>
  </div>
</div>
`;
